--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,15 +11,15 @@
   --gray: #DDDDDD;
 }
 
-@media(max-width: 1080px) {
+@media screen and (max-width: 1080px) {
   html {
-      font-size: 93.75%;
+    font-size: 93.75%;
   }
 }
 
-@media(max-width: 720px) {
+@media screen and (max-width: 720px) {
   html {
-      font-size: 87.5%;
+    font-size: 87.5%;
   }
 }
 
